Fix z-index overlap

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -40,6 +40,7 @@
 		width: 90px;
 		height: 90px;
 		background: url('../img/droplet.svg') no-repeat;
+		z-index: 2000;
 	}
 
 	.navbar-brand {
